--- a/src/Parquet/Parquet.csproj
+++ b/src/Parquet/Parquet.csproj
@@ -34,6 +34,7 @@
       <Version>0.9.3</Version>
     </PackageReference>
     <PackageReference Include="NetBox" Version="1.4.3" />
+    <PackageReference Include="Snappy.Sharp" Version="1.0.0-b20170602007" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 </Project>
