added new parquet-utils with optional summary stats

--- a/src/Parquet.Test/Parquet.Test.csproj
+++ b/src/Parquet.Test/Parquet.Test.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\parquet-utils\parquet-utils.csproj" />
     <ProjectReference Include="..\Parquet\Parquet.csproj" />
   </ItemGroup>
 
