schema print, schema and element equality, schema validation in append

--- a/src/Parquet/Parquet.csproj
+++ b/src/Parquet/Parquet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard1.4;netstandard1.6;net451</TargetFrameworks>
     <Version>1.0.0</Version>
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="apache-thrift-netcore" Version="0.9.3.1" />
-    <PackageReference Include="NetBox" Version="1.4.13" />
+    <PackageReference Include="NetBox" Version="1.4.19" />
     <PackageReference Include="Snappy.Sharp" Version="1.0.0-b20170602007" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
