--- a/src/Parquet/Parquet.csproj
+++ b/src/Parquet/Parquet.csproj
@@ -38,12 +38,14 @@
     <DocumentationFile>bin\Release\net451\Parquet.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Primitives\**" />
+    <EmbeddedResource Remove="Primitives\**" />
+    <None Remove="Primitives\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="apache-thrift-netcore" Version="0.9.3.1" />
     <PackageReference Include="NetBox" Version="1.4.19" />
     <PackageReference Include="Snappy.Sharp" Version="1.0.0-b20170602007" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Primitives\Values\File\" />
   </ItemGroup>
 </Project>
