--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,10 @@
-version: 1.1.0-alpha-{build}
+version: 1.1.{build}
 pull_requests:
   do_not_increment_build_number: true
 branches:
   only:
   - master
-  - /stable\/.*/
+skip_tags: true
 image: Visual Studio 2017
 configuration: Release
 platform: Any CPU
