--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ image: Visual Studio 2017
 configuration: Release
 before_build:
 - ps: >-
-   conda
+   pip install pyarrow
    .\appveyor.ps1
 build:
   project: src/Parquet.sln
