--- a/src/Parquet/Parquet.csproj
+++ b/src/Parquet/Parquet.csproj
@@ -61,7 +61,7 @@ bug fixes:
     <DocumentationFile>bin\Release\net451\Parquet.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="apache-thrift-netcore" Version="0.9.3.1" />
+    <PackageReference Include="Apache.Thrift" Version="1.0.2" />
     <PackageReference Include="NetBox" Version="1.4.22" />
   </ItemGroup>
 </Project>
