--- a/build.ini
+++ b/build.ini
@@ -2,6 +2,7 @@ VersionMajor=2
 VersionMinor=1
 VersionPatch=4
 BuildNo=%APPVEYOR_BUILD_NUMBER%
+CiVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%Git.BranchName%-%BuildNo%
 
 ;NuGet specific
 Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
