--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ configuration: Release
 platform: Any CPU
 before_build:
 - ps: >-
+    gci env:
+
     dotnet restore src/Parquet.sln
 
     cd src/Parquet
