use appveyor branch name

--- a/build.ini
+++ b/build.ini
@@ -2,7 +2,7 @@ VersionMajor=2
 VersionMinor=1
 VersionPatch=4
 BuildNo=%APPVEYOR_BUILD_NUMBER%
-CiVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%Git.BranchName%-%BuildNo%
+CiVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%APPVEYOR_REPO_BRANCH%-%BuildNo%
 
 ;NuGet specific
 Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
