--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+   <PropertyGroup>
+      <OutputType>Exe</OutputType>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
+      <AssemblyName>dotnet-parquet</AssemblyName>
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>dotnet-parquet</AssemblyName>
-  
       <!-- set it up as CLI global tool-->
-     <PackAsTool>true</PackAsTool>
-     <ToolCommandName>parquet</ToolCommandName>
-     <PackageOutputPath>./nupkg</PackageOutputPath>
-  </PropertyGroup>
+      <PackAsTool>true</PackAsTool>
+      <ToolCommandName>parquet</ToolCommandName>
+   </PropertyGroup>
+
+   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+   </PropertyGroup>
+
 
 </Project>
