--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,8 @@ before_build:
 
     dotnet housework author ./src/SharpArrow/SharpArrow.csproj build.ini
 
+    dotnet housework author ./src/Parquet.CLI/Parquet.CLI.csproj build.ini
+
     dotnet housework substitute ./src/Parquet/ThriftFooter.cs build.ini -r
 
     dotnet restore src/Parquet.sln
