--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -13,5 +13,13 @@
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
 
+   <ItemGroup>
+     <PackageReference Include="Cpf.Core" Version="0.0.0-preview-22" />
+   </ItemGroup>
+
+   <ItemGroup>
+     <ProjectReference Include="..\Parquet\Parquet.csproj" />
+   </ItemGroup>
+
 
 </Project>
