--- a/build.ini
+++ b/build.ini
@@ -5,7 +5,7 @@ BuildNo=%APPVEYOR_BUILD_NUMBER%
 CiVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%APPVEYOR_REPO_BRANCH%-%BuildNo%
 
 ;NuGet specific
-Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
+Version=%VersionMajor%.%VersionMinor%.%VersionPatch%-preview-%BuildNo%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2017-%date:yyyy% by Elastacloud Ltd.
