--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -2,11 +2,12 @@
    <PropertyGroup>
       <OutputType>Exe</OutputType>
       <TargetFramework>netcoreapp2.1</TargetFramework>
-      <AssemblyName>dotnet-parquet</AssemblyName>
+      <AssemblyName>parq</AssemblyName>
 
       <!-- set it up as CLI global tool-->
       <PackAsTool>true</PackAsTool>
-      <ToolCommandName>parquet</ToolCommandName>
+      <ToolCommandName>parq</ToolCommandName>
+      <PackageId>parq</PackageId>
    </PropertyGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
