--- a/src/Parquet.Test/Parquet.Test.csproj
+++ b/src/Parquet.Test/Parquet.Test.csproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-     <None Update="data\*">
+     <None Update="data\**">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
      </None>
 
