--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -8,6 +8,7 @@
       <PackAsTool>true</PackAsTool>
       <ToolCommandName>parq</ToolCommandName>
       <PackageId>parq</PackageId>
+      <Description>Parq is a .NET Core global tool that is a console interface to the great open-source library Parquet.Net.</Description>
    </PropertyGroup>
 
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
