--- a/build.ini
+++ b/build.ini
@@ -5,13 +5,14 @@ BuildNo=%APPVEYOR_BUILD_NUMBER%
 CiVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%APPVEYOR_REPO_BRANCH%-%BuildNo%
 
 ;NuGet specific
-Version=%VersionMajor%.%VersionMinor%.%VersionPatch%-preview-%BuildNo%
+;Version=%VersionMajor%.%VersionMinor%.%VersionPatch%-preview-%BuildNo%
+Version=%VersionMajor%.%VersionMinor%.%VersionPatch%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2017-%date:yyyy% by Elastacloud Ltd.
 PackageIconUrl=http://i.isolineltd.com/nuget/parquet.png
 PackageProjectUrl=https://github.com/elastacloud/parquet-dotnet
 RepositoryUrl=https://github.com/elastacloud/parquet-dotnet
-Authors=Ivan Gavryliuk (@aloneguid); Richard Conway (@azurecoder)
+Authors=Ivan Gavryliuk (@aloneguid); Richard Conway (@azurecoder); Andy Cross (@andyelastacloud)
 PackageLicenseUrl=https://github.com/elastacloud/parquet-dotnet/blob/master/LICENSE
 RepositoryType=GitHub
