--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -8,7 +8,7 @@
       <PackAsTool>true</PackAsTool>
       <ToolCommandName>parq</ToolCommandName>
       <PackageId>parq</PackageId>
-      <Description>Parq is a .NET Core global tool that is a console interface to the great open-source library Parquet.Net. Parq's version corresponds to the version of parquet.net library it's based upon.</Description>
+      <Description>Parq is a .NET Core global tool that is a console interface to the great open-source library Parquet.Net. Parq's version corresponds to the version of parquet.net library it's based upon. Parq is developed and maintained by Parquet.Net team.</Description>
       <PackageReleaseNotes>3.1.0
 - the first release and a single command to show file schema</PackageReleaseNotes>
    </PropertyGroup>
