--- a/src/Parquet/Parquet.csproj
+++ b/src/Parquet/Parquet.csproj
@@ -8,7 +8,11 @@
     <PackageId>Parquet.Net</PackageId>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <PackageReleaseNotes>3.1.1:
+    <PackageReleaseNotes>3.1.2:
+- new feature: replaced default ToString() method in Table and Row object to produce json (#346)
+- new feature: parquet CLI supports conversion from parquet to json (#341)
+
+3.1.1:
 parq cli improvements
 
 3.1.0:
