--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,4 +27,9 @@ test_script:
    dotnet test src\Parquet.Test -c release
 artifacts:
 - path: src/**/*.nupkg
-deploy: off
+deploy:
+- provider: NuGet
+  api_key:
+    secure: hQlxhZb6uDjtZz4V+DZyAqjxnGjXqEokO/tckU14RDUP/AxTkFnX869pNsXCv+Ab
+  on:
+    branch: release
