--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,9 +26,18 @@ test_script:
    dotnet test src\Parquet.Test -c release
 artifacts:
 - path: src/**/*.nupkg
-deploy:
-- provider: NuGet
-  api_key:
-    secure: hQlxhZb6uDjtZz4V+DZyAqjxnGjXqEokO/tckU14RDUP/AxTkFnX869pNsXCv+Ab
-  on:
-    branch: master
+deploy: off
+
+# override branch policy
+for:
+
+# master
+- 
+  branches:
+    only:
+      - master
+  skip_non_tags: true
+  deploy:
+    - provider: NuGet
+      api_key:
+        secure: hQlxhZb6uDjtZz4V+DZyAqjxnGjXqEokO/tckU14RDUP/AxTkFnX869pNsXCv+Ab
