--- a/build.ini
+++ b/build.ini
@@ -1,10 +1,10 @@
 VersionMajor=%gitVersion.major%
 VersionMinor=%gitVersion.minor%
-VersionPatch=$gitVersion.patch$
+VersionPatch=%gitVersion.patch%
 BuildNo=%APPVEYOR_BUILD_NUMBER%
 
 ;NuGet specific
-Version=%gitVersion.semVer%
+Version=%gitVersion.legacySemVer%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2017-%date:yyyy% by Elastacloud Ltd.
