- update manifest so it works for azure devops - remove appveyor config as it's not used anymore

--- a/build.ini
+++ b/build.ini
@@ -1,7 +1,7 @@
 VersionMajor=%gitVersion.major%
 VersionMinor=%gitVersion.minor%
 VersionPatch=%gitVersion.patch%
-BuildNo=%APPVEYOR_BUILD_NUMBER%
+BuildNo=0
 
 ;NuGet specific
 Version=%gitVersion.legacySemVer%
