--- a/src/spark-experiments/pom.xml
+++ b/src/spark-experiments/pom.xml
@@ -5,31 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <scala.version>2.11.8</scala.version>
-        <scala.compat.version>2.11.8</scala.compat.version>
-        <scala.binary.version>2.11</scala.binary.version>
+        <scala.version>2.12.8</scala.version>
+        <scala.compat.version>2.12.8</scala.compat.version>
+        <scala.binary.version>2.12</scala.binary.version>
     </properties>
 
     <groupId>parquet</groupId>
     <artifactId>parquet</artifactId>
     <version>0.1</version>
-
-    <repositories>
-        <repository>
-            <id>scala-tools.org</id>
-            <name>Scala-Tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-Tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
-    </pluginRepositories>
-
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core_2.11 -->
@@ -55,7 +38,7 @@
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--<testSourceDirectory>src/test/scala</testSourceDirectory>-->
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
