--- a/src/Parquet.CLI/Parquet.CLI.csproj
+++ b/src/Parquet.CLI/Parquet.CLI.csproj
@@ -19,8 +19,11 @@
 
    <ItemGroup>
      <PackageReference Include="Cpf.Core" Version="1.1.52" />
-     <PackageReference Include="LogMagic" Version="2.17.4" />
-     <PackageReference Include="LogMagic.Microsoft.Azure.ApplicationInsights" Version="2.17.4" />
+     <PackageReference Include="NetBox" Version="2.1.5" />
+     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+     <PackageReference Include="Serilog" Version="2.8.0" />
+     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="2.6.0" />
+     <PackageReference Include="Serilog.Sinks.Trace" Version="2.1.0" />
    </ItemGroup>
 
    <ItemGroup>
