--- a/src/Parquet.Runner/Parquet.Runner.csproj
+++ b/src/Parquet.Runner/Parquet.Runner.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LogMagic" Version="2.17.4" />
+    <PackageReference Include="NetBox" Version="2.1.7" />
   </ItemGroup>
 
   <ItemGroup>
