bolting on multi-stage pipelines

--- a/build.ini
+++ b/build.ini
@@ -4,7 +4,7 @@ VersionPatch=%gitVersion.patch%
 BuildNo=0
 
 ;NuGet specific
-Version=%gitVersion.legacySemVer%
+Version=%gitVersion.SemVer%
 FileVersion=%VersionMajor%.%VersionMinor%.%VersionPatch%.%BuildNo%
 AssemblyVersion=%VersionMajor%.0.0.0
 Copyright=Copyright (c) 2017-%date:yyyy% by Elastacloud Ltd.
