--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,9 @@ stages:
     - task: SonarSource.sonarcloud.38b27399-a642-40af-bb7d-9971f69712e8.SonarCloudPublish@1
       displayName: 'SonarQube: Publish Quality Gate Result'
 
-  - job: MultiOSTest
+- stage: Test
+  jobs:
+  - job: Test
     display: 'Tests'
     strategy:
       matrix:
