--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,5 +119,29 @@ stages:
         projects: ./src/Parquet.sln
         arguments: '-c release'
 
-
+- stage: Release
+  dependsOn: ['Build', 'Test']
+  condition: "and( eq(variables['Build.SourceBranch'], 'refs/heads/master'), succeeded('Build'), succeeded('Test') )"
+  jobs:
+  - deployment: NugetOrg
+    pool:
+      vmImage: $(vmImage)
+    environment: live
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: DownloadBuildArtifacts@0
+            inputs:
+              buildType: 'current'
+              downloadType: 'single'
+              artifactName: 'nuget'
+              downloadPath: '$(System.ArtifactsDirectory)'
+          - task: NuGetCommand@2
+            displayName: nuget.org
+            inputs:
+              command: push
+              packagesToPush: '$(System.ArtifactsDirectory)/nuget/*.nupkg'
+              nuGetFeedType: external
+              publishFeedCredentials: 'nuget.org (aloneguid)'
 
